# memoir

./: .gitignore  LICENSE  README.md  pyproject.toml
memoir/: __init__.py  cli.py
memoir/core/: __init__.py  crisis_forecast.py  git_analyzer.py  narrator.py  pattern_detector.py  storage.py
memoir/exporters/: __init__.py  html.py  json_export.py  markdown.py
memoir/models/: __init__.py  chapter.py  commit_data.py  forecast.py  pattern.py
memoir/utils/: __init__.py  config.py  formatter.py
